@startuml
hide circle
skinparam Shadowing false
skinparam class {
    backgroundColor GhostWhite
}


class user {
    (pk) id: Integer
    name: String
    username: String
    password: String
}

class purchase {
    (pk) id: Integer
    (fk) item_id: Integer
    (fk) list_id: Integer
    amount: Integer
    collected: Boolean
}


class item {
    (pk) id: Integer
    (fk) kategoria_id: kategoria
    name: String
}

class category {
    (pk) id: Integer
    name: String
}

class list {
    (pk) id: Integer
    ' (fk) user_id: Integer
    name: String
    date: Date
    completed: Boolean
}

class userList	{
    (fk) user_id: user
    (fk) list_id: list
}

item "*" -- "1" category
list "1" -- "*" userList
user "1" -- "*" userList
item "*" -- "1" purchase
list "*" -- "1" purchase

@endum
